--- a/ui/main.reel/main.css
+++ b/ui/main.reel/main.css
@@ -1,4 +1,9 @@
-.Main {}
+.Main {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flex;
+    display: flex;
+}
 
 .Overlay {
     background-color: rgba(0,0,0,0.5);
